implantação postgres / produtor como parte integrante do evento

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-
-# Ambiente: development ou production
+﻿# Ambiente: development ou production
 FLASK_ENV=development
 
 # Chave de segurança
 SECRET_KEY=socrates_dev_secret
 
-# Banco de dados
-DATABASE_URL=sqlite:///database.db
+# Banco de dados PostgreSQL
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/socrates_online_dev
