--- a/env.example
+++ b/env.example
@@ -19,3 +19,24 @@ MAX_CONTENT_LENGTH=16777216
 
 # Para produção no Railway
 PORT=5000
+
+# Configurações de E-mail (para servidor particular)
+# Solicite estes dados ao seu provedor de hospedagem:
+MAIL_SERVER=mail.socratesonline.com
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USE_SSL=false
+MAIL_USERNAME=contato@socratesonline.com
+MAIL_PASSWORD=sua-senha-do-email-contato
+MAIL_DEFAULT_SENDER=contato@socratesonline.com
+
+# Configurações alternativas comuns para servidores particulares:
+# MAIL_SERVER=smtp.socratesonline.com (ou o que seu provedor informar)
+# MAIL_PORT=465 (se usar SSL)
+# MAIL_USE_TLS=false (se usar SSL)
+# MAIL_USE_SSL=true (se usar SSL na porta 465)
+
+# Configurações de WhatsApp API (opcional)
+# Configure com seu provedor de API do WhatsApp (ex: Twilio, Chat-API, etc.)
+WHATSAPP_API_URL=https://api.whatsapp.exemplo.com/send
+WHATSAPP_API_TOKEN=seu-token-da-api-whatsapp
